--- a/workspace_teamproject/mypage/mypage/src/main/webapp/css/production_plan_management.css
+++ b/workspace_teamproject/mypage/mypage/src/main/webapp/css/production_plan_management.css
@@ -1,54 +1,54 @@
     /* 전체 마진, 폰트 */
     body {
-        margin: 0px;
-        font-size: 1em;
+    	margin: 0px;
+    	font-size: 1em;
     }
 
     /* 생산계획관리 헤더 */
     #headerj {
-        border-top: 2px solid #888888;
-        border-bottom: 2px solid #888888;
+    	border-top: 2px solid #888888;
+    	border-bottom: 2px solid #888888;
 
-        margin-top: 10px;
-        padding: 5px;
+    	margin-top: 10px;
+    	padding: 5px;
 
-        font-weight: bold;
+    	font-weight: bold;
     }
 
 
     /* 윗칸 div */
     .updiv {
-        /* border: 1px dotted black; */
-        width: 97%;
-        height: 700px;
-        margin-left: 1%;
-        margin-right: 1%;
-        margin-top: 15px;
-        font-size: 0.8em;
+    	/* border: 1px dotted black; */
+    	width: 97%;
+    	height: 700px;
+    	margin-left: 1%;
+    	margin-right: 1%;
+    	margin-top: 15px;
+    	font-size: 0.8em;
     }
 
     /* 생산계획관리 div */
     #header1_div {
-        border: 1px solid #cccccc;
-        background-color: #eaeaea;
-        padding-top: 3px;
-        padding-bottom: 3px;
-        height: 30px;
-        font-size: 14px;
-        font-weight: bold;
+    	border: 1px solid #cccccc;
+    	background-color: #eaeaea;
+    	padding-top: 3px;
+    	padding-bottom: 3px;
+    	height: 30px;
+    	font-size: 14px;
+    	font-weight: bold;
 
-        display: flex;
-        flex-direction: row-reverse;
+    	display: flex;
+    	flex-direction: row-reverse;
     }
 
     /* 생산계획관리 text div */
     #header1_div_text {
-        margin-left: 15px;
+    	margin-left: 15px;
     }
 
     /* btn_wrap_div */
     #btn_wrap_div {
-        margin-right: 15px;
+    	margin-right: 15px;
     }
 
     /* 버튼 */
@@ -59,15 +59,15 @@
     #btn_save,
     #btn_plancode,
     #btn_modify_end {
-        background-color: #3498db;
-        border: 0px;
-        border-radius: 5px;
-        color: white;
-        height: 30px;
-        margin-right: 10px;
-        padding: 0px 10px;
+    	background-color: #3498db;
+    	border: 0px;
+    	border-radius: 5px;
+    	color: white;
+    	height: 30px;
+    	margin-right: 10px;
+    	padding: 0px 10px;
 
-        cursor: pointer;
+    	cursor: pointer;
     }
 
     /* 버튼 클릭 */
@@ -78,27 +78,27 @@
     #btn_save:active,
     #btn_plancode:active,
     #btn_modify_end:active {
-        background-color: #346edb;
+    	background-color: #346edb;
     }
 
     /* btn_modify */
     #btn_modify {
-        display: inline-block;
+    	display: inline-block;
     }
 
     /* btn_modify_end */
     #btn_modify_end {
-        display: none;
+    	display: none;
     }
 
     /* plan_table_div */
     #plan_table_div {
-        border-top: 1px solid #cccccc;
-        border-bottom: 1px solid #cccccc;
-        width: 100%;
-        height: 600px;
+    	border-top: 1px solid #cccccc;
+    	border-bottom: 1px solid #cccccc;
+    	width: 100%;
+    	height: 600px;
 
-        overflow-y: scroll;
+    	overflow-y: scroll;
     }
 
     /* plan_table 테두리 */
@@ -107,34 +107,45 @@
     #plan_table_thead th,
     #plan_table_tbody tr,
     #plan_table_tbody td {
-        border: 1px solid #cccccc;
-        border-collapse: collapse;
+    	border: 1px solid #cccccc;
+    	border-collapse: collapse;
     }
 
     /* #plan_table_thead 컬럼명 고정 */
     #plan_table_thead {
-        position: sticky;
-        top: 0;
-        background-color: #eaeaea;
+    	position: sticky;
+    	top: 0;
+    	background-color: #eaeaea;
     }
 
     /* plan_table 자체넓이 */
     #plan_table {
-        width: 100%;
+    	width: 100%;
     }
 
     /* plan_table 컬럼 */
     #plan_table_thead tr {
-        height: 30px;
+    	height: 30px;
     }
 
     /* plan_table 내용 */
     #plan_table_tbody td {
-        height: 30px;
+    	height: 30px;
     }
 
-
-
+    input {
+    	border: none;
+    	outline: none;
+    	width: 100px;
+    	
+    }
+    input:focus {
+    	outline: none;
+    }
+	input[type="checkbox"] {
+		width: 13px;
+		height: 13px;
+	}
 
     /**************************************************/
 
@@ -142,85 +153,85 @@
 
 
     #alarm_wrap {
-        z-index: 10;
+    	z-index: 10;
 
-        display: none;
+    	display: none;
 
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    	position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translate(-50%, -50%);
 
-        border: 1px solid #bebebe;
-        width: 500px;
-        height: 250px;
+    	border: 1px solid #bebebe;
+    	width: 500px;
+    	height: 250px;
 
-        background-color: #ededed;
-        border-radius: 10px;
-        ;
+    	background-color: #ededed;
+    	border-radius: 10px;
+    	;
     }
 
     #message_div {
-        width: 100% -1px;
-        height: 70%;
+    	width: 100% -1px;
+    	height: 70%;
 
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+    	display: flex;
+    	justify-content: space-around;
+    	align-items: center;
 
-        font-size: 18px;
+    	font-size: 18px;
     }
 
     #alarm_btn_wrap {
-        width: 100% -1px;
-        height: 29%;
+    	width: 100% -1px;
+    	height: 29%;
 
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+    	display: flex;
+    	justify-content: space-around;
+    	align-items: center;
     }
 
     #btn_cancel,
     #btn_ok {
-        width: 200px;
-        height: 50px;
-        border: 0px;
-        border-radius: 5px;
+    	width: 200px;
+    	height: 50px;
+    	border: 0px;
+    	border-radius: 5px;
 
-        cursor: pointer;
+    	cursor: pointer;
     }
 
     #btn_ok {
-        background-color: #3498db;
-        color: white;
+    	background-color: #3498db;
+    	color: white;
     }
 
     #btn_ok:active {
-        background-color: #346edb;
+    	background-color: #346edb;
     }
 
     #btn_cancel {
-        background-color: #fa5959;
-        color: white;
+    	background-color: #fa5959;
+    	color: white;
     }
 
     #btn_cancel:active {
-        background-color: #d80001;
+    	background-color: #d80001;
     }
 
 
     #overlay {
-        position: fixed;
-        display: none;
+    	position: fixed;
+    	display: none;
 
-        top: 0;
-        left: 0;
+    	top: 0;
+    	left: 0;
 
-        height: 100%;
-        width: 100%;
+    	height: 100%;
+    	width: 100%;
 
-        background-color: black;
-        opacity: 0.5;
+    	background-color: black;
+    	opacity: 0.5;
 
-        z-index: 5;
+    	z-index: 5;
     }
