--- a/workspace_teamproject/mypage/mypage/src/main/webapp/css/production_plan_management.css
+++ b/workspace_teamproject/mypage/mypage/src/main/webapp/css/production_plan_management.css
@@ -58,7 +58,8 @@
     #btn_delete,
     #btn_save,
     #btn_plancode,
-    #btn_modify_end {
+    #btn_modify_end,
+    #btn_add_end {
     	background-color: #3498db;
     	border: 0px;
     	border-radius: 5px;
@@ -77,17 +78,20 @@
     #btn_delete:active,
     #btn_save:active,
     #btn_plancode:active,
-    #btn_modify_end:active {
+    #btn_modify_end:active,
+    #btn_add_end:active {
     	background-color: #346edb;
     }
 
-    /* btn_modify */
-    #btn_modify {
+    /* btn_modify, btn_add */
+    #btn_modify,
+    #btn_add {
     	display: inline-block;
     }
 
-    /* btn_modify_end */
-    #btn_modify_end {
+    /* btn_modify_end, btn_add_end */
+    #btn_modify_end,
+    #btn_add_end {
     	display: none;
     }
 
